# OneWord_OneImage

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.env/: pyvenv.cfg
.env/Scripts/: activate  activate.bat
app/backend/: settings.py  urls.py
app/frontend/: package-lock.json
app/frontend/src/components/: FooterLinks.jsx  HeroSection.jsx
app/one_word_one_image/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/one_word_one_image/migrations/: 0001_initial.py  0002_alter_clip_user.py
docker-utils/: policy.xml  sources.list
one_word_one_image/src/: db.sqlite3
one_word_one_image/src/backend/: settings.py  urls.py
one_word_one_image/src/frontend/: config-overrides.js  package-lock.json  package.json  webpack.config.js
one_word_one_image/src/frontend/src/: App.css  App.js
one_word_one_image/src/frontend/src/components/: Features.jsx  FooterLinks.jsx  HeroSection.jsx  Nav.jsx
one_word_one_image/src/frontend/src/context/: AuthContext.js
one_word_one_image/src/frontend/src/pages/: ChooseImportPage.jsx  ClipsPage.jsx  CreatePage.jsx  FeedPage.jsx  HomePage.jsx  LoginPage.jsx  SignUpPage.jsx
one_word_one_image/src/one_word_one_image/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
one_word_one_image/src/one_word_one_image/migrations/: 0002_clip_alter_user_options_alter_user_managers_and_more.py  0003_alter_clip_clip_alter_clip_clip_description_and_more.py
one_word_one_image/src/users/: api.py  models.py  serializers.py  urls.py
one_word_one_image/src/users/migrations/: 0001_initial.py
(+10 files in other folders)
