[tool.poetry]
name = "one word one image"
version = "0.1.0"
description = ""
authors = ["layfredrc <47161258+layfredrc@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
